# Pokemon_go

./: README.md
presentation/: README.md  pokemon.pptx
report/: report.md
source_code/: CMakeLists.txt  README.md  package.xml
source_code/launch/: amcl.launch  begin_clinet.launch  move_base.launch  multi_turtlebot3_nav.launch  multi_turtlebot3_world.launch  turtlebot3_navigation.launch  turtlebot3_pokemon_world.launch
source_code/map/: pokemap.pgm  pokemap.yaml  pokemon.pgm  pokemon.yaml
source_code/param/: global_costmap_params.yaml
source_code/param/tb3_0/: costmap_common_params_burger.yaml  global_costmap_params.yaml
source_code/param/tb3_1/: global_costmap_params.yaml  local_costmap_params.yaml
source_code/param/tb3_2/: global_costmap_params.yaml  local_costmap_params.yaml
source_code/rviz/: multi_turtlebot3_navigation.rviz
source_code/scripts/: exploring_pokemon.py
source_code/src/: pokemon_catching0.cpp  pokemon_catching1.cpp  pokemon_catching2.cpp  pokemon_position.txt  pokemon_searching.cpp  pokemon_searching0.cpp  pokemon_searching1.cpp  pokemon_searching2.cpp
source_code/urdf/: kinect_gazebo.xacro  turtlebot3_burger.urdf.xacro
source_code/worlds/pokemon_maze/worlds/: pokemon.world
